Clase 11 - Desglose cart

--- a/Clase 11 - Firebase II/clase 11/src/components/CartItem/styles.module.scss
+++ b/Clase 11 - Firebase II/clase 11/src/components/CartItem/styles.module.scss
@@ -1,7 +1,7 @@
 .cartItem{
     padding: 20px;
     width: 100%;
-    background-color: azure;
+    background-color: violet;
     color: black;
     display: flex;
     flex-direction: row;
