--- a/Clase 12 - Técnicas de rendering/project-clase12/src/App.css
+++ b/Clase 12 - Técnicas de rendering/project-clase12/src/App.css
@@ -3,4 +3,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
 }
